5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4382/executions/1771_672.log
== SUBMITION (2019-05-23 18:14:07) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import*
N = int(input("digite o numero : "))
vetor = ones(N,dtype = int)

-- EXECUTION TIME:
0.591474
-- TEST CASE 1:
---- input:
34
---- correct output:
[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]
---- user output:

-- TEST CASE 2:
---- input:
10
---- correct output:
[1 1 1 1 1 1 1 1 1 1]
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 18:14:08) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import*
N = int(input("digite o numero : "))
vetor = ones(N,dtype = int)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 18:14:32) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import*
N = int(input("digite o numero : "))
vetor = ones(N,dtype = int)
print(vetor)

-- EXECUTION TIME:
0.588385
-- TEST CASE 1:
---- input:
34
---- correct output:
[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]
-- TEST CASE 2:
---- input:
10
---- correct output:
[1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1 1 1 1 1]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 00:37:05) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
N = int(input("digite o numero :"))
V = ones(N,dtype:int)
print(V)
-- ERROR:
File "XXXX", line 4
    V = ones(N,dtype:int)
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 00:37:35) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
N = int(input("digite o numero :"))
V = ones(N,dtype=int)
print(V)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 00:37:48) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *
N = int(input("digite o numero :"))
V = ones(N,dtype=int)
print(V)
-- EXECUTION TIME:
0.381576
-- TEST CASE 1:
---- input:
34
---- correct output:
[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]
-- TEST CASE 2:
---- input:
10
---- correct output:
[1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1 1 1 1 1]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
